--- a/Test Keyboard(CHATGPT)/styles.css
+++ b/Test Keyboard(CHATGPT)/styles.css
@@ -4,9 +4,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background-color: #f0f0f0;
-    margin: 0;
+    background-color: #e7e7e7;
+    overflow:hidden;
 }
 
 h1 {
@@ -23,37 +22,56 @@ h1 {
     border: 1px solid #ccc;
 }
 
-.keyboard {
-    display: grid;
-    grid-template-columns: repeat(10, 50px);
-    gap: 10px;
+.keys {
+    display: flex;
+    list-style: none;
 }
 
-.key {
-    width: 50px;
-    height: 50px;
-    font-size: 18px;
+li{
+    box-shadow: 0px -6px 10px #e7e7e7, 0px 4px 15px rgba(0,0,0,0.15);
+    transition: 0.5s;
+    height: 2.5em;
+    font-size: 1em;
+    width: 3em;
+    margin: .3em;
+    background-color: #f2f2f2;
+    border-radius: 0.5em;
+    line-height: 2.5em;
+    letter-spacing: 1px;
     text-align: center;
-    background-color: #ddd;
-    border: none;
-    border-radius: 5px;
+}
+li:hover{
+    box-shadow: 0 2px 0 rgba(0,0,0, 0.15);
     cursor: pointer;
-    transition: background-color 0.2s;
+    top:3px;
 }
 
-.key:hover {
-    background-color: #ccc;
+#backspace{
+    width: 7em;
 }
-
-#space {
-    grid-column: span 3;
+#tab{
+    width: 5em;
 }
-
-#backspace {
-    background-color: #ff6666;
-    color: white;
+#capslock{
+    width: 6.4em;
 }
-
-#backspace:hover {
-    background-color: #cc4d4d;
+#enter{
+    width: 7em;
+}
+#shift{
+    width: 7.35em;
+}
+#space{
+    width: 22em;
+}
+#one{
+    width: 3.7em;
+}
+#slash{
+    width:5em;
+}
+#spacing{
+    display: flex;
+    list-style: none;
+    padding-left: 1.4em;
 }
